--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -13,9 +13,12 @@
         width="3"
         height="2"
         depth="1"
-        color="#BBAA33" 
+        color="#BBAA36"
         shadow>
       </a-box>
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-sky color="#ECECEC"></a-sky>
     </a-scene>
   </body>
 </html>
